# MoneyBot

./: Chatbot.html  Chatbot2.html  audio (LVLS).html  audio.css  audio.html  audio.js  budgetbuilder.css  budgetbuilder.html  budgetbuilder.js  chatbot.js  chatgpt.css  comingsoon.css  comingsoon.html  comingsoon.js  habit-tracker.css  habit-tracker.html  habit-tracker.js  home.js  index.html  library.css  library.html  networthtracker.html  networthtracker.js  package-lock.json  package.json  pathways.css  pathways.html  pathways.js  priorities.css  priorities.html  priorities.js  priorities2.css  pyproject.toml  replit.nix  script.js  server.js  styles.css  tools.css  tools.html  txt  (+3 more)
