[tool.poetry]
name = "repl-html-moneybot-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_html_moneybot_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
openai = "^1.35.10"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
